<resources>
    <string name="app_name">StepCounter</string>
    <string name="steps">Steps</string>
    <string name="goals">Goals</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="editableGoals">Editable Goals</string>
    <string name="name">Name</string>
    <string name="stepsColon">Steps:</string>
    <string name="stepsInputHelperText">Use negative values to remove steps</string>
    <string name="addSteps">Add Steps</string>
    <string name="deleteHistory">Delete History</string>
    <string name="goalNameHelperText">Make sure that the name is unique</string>
    <string name="goalStepsHelperText">Input a non-zero value</string>
    <string name="channel_name">StepService notification channel</string>
    <string name="channel_id">STEPSERVICE CHANNEL</string>
    <string name="automaticStepCounting">Automatic Step Counting</string>
    <string name="halfWayThere">Half Way There!</string>
    <string name="AllTheWayThere">All The Way There!</string>
    <string name="ProgressNotificationFormat">You have completed %d%% of today\'s goal!</string>
    <string name="AutomaticStepCounting">Automatic Step Counting</string>
    <string name="AutomaticStepCountingText">StepCounter now automatically records your steps</string>
    <string name="AreYouSure">Are you sure?</string>
    <string name="DeleteHistoryAlertText">You\'ll lose all your history!</string>
    <string name="Delete">Delete</string>
    <string name="Cancel">Cancel</string>
    <string name="Accept">Accept</string>
    <string name="DeleteGoalAlertText">This goal will be deleted!</string>
    <string name="EditGoal">Edit Goal</string>
    <string name="AddGoal">Add Goal</string>
    <string name="AddSteps">Add Steps</string>
    <string name="ChangeGoal">Change Goal</string>
    <string name="NewDateAdded">New date added</string>
    <string name="DateAlreadyExists">Date already exists</string>
    <string name="HistoryDeleted">History deleted</string>
    <integer name="automaticStepCounting_notification_id">1</integer>
    <integer name="progress_notification_id">2</integer>

</resources>
