<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_steps">

    <fragment
            android:id="@+id/navigation_history"
            android:name="strathclyde.emb15144.stepcounter.ui.history.HistoryFragment"
            android:label="@string/history"
            tools:layout="@layout/fragment_history"/>

    <fragment
            android:id="@+id/navigation_steps"
            android:name="strathclyde.emb15144.stepcounter.ui.steps.StepsFragment"
            android:label="@string/steps"
            tools:layout="@layout/fragment_steps"/>

    <fragment
            android:id="@+id/navigation_goals"
            android:name="strathclyde.emb15144.stepcounter.ui.goals.GoalsFragment"
            android:label="@string/goals"
            tools:layout="@layout/fragment_goals"/>

</navigation>
