<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="editGoalDialogViewModel"
                type="strathclyde.emb15144.stepcounter.viewmodel.EditGoalDialogViewModel"/>
    </data>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="24dp"
            android:paddingVertical="6dp">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:helperText="@string/goalNameHelperText"
                app:helperTextEnabled="false"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={editGoalDialogViewModel.name}"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/steps"
                app:helperText="@string/goalStepsHelperText"
                app:helperTextEnabled="false"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stepsInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={editGoalDialogViewModel.steps}"
                    android:inputType="number"
                    android:maxLength="6"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</layout>
